// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should render default correctly 1`] = `
<div class="fx-stepper">
  <fx-button-stub></fx-button-stub><input class="fx-stepper_input" type="text" inputmode="decimal" name="" value="1">
  <fx-button-stub></fx-button-stub>
</div>
`;

exports[`Stepper should render prop disabled=true correctly 1`] = `
<div class="fx-stepper disabled">
  <fx-button-stub></fx-button-stub><input class="fx-stepper_input" type="text" inputmode="decimal" name="" disabled="" value="1">
  <fx-button-stub></fx-button-stub>
</div>
`;
